--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "axios": "^0.21.1",
     "react-router-dom": "^5.2.0"
   },
+  "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/react-router-dom": "^5.1.7"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
