--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
-    "@types/react-router-dom": "^5.1.7"
+    "@types/react-router-dom": "^5.1.7",
+    "@types/react-dom": "^17.0.4",
+    "@types/react": "^17.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
